feat: add release page

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/JsonEditor.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/JsonEditor.razor
@@ -18,7 +18,7 @@
                     </div>
                 }
             </div>
-            <textarea style="outline:none;resize:none;width:100%; height: 312px;" autofocus
+            <textarea style="outline:none;resize:none;width:100%;" autofocus
                       disabled="@Disabled"
                       @oninput="OnInput" @ref="Ref" value="@Value" @onchange="HandleOnChange">
             </textarea>
