--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Public.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Public.razor
@@ -2,5 +2,6 @@
 
 <Config ConfigObjectType="@_configModel.ConfigObjectType"
         EnvironmentClusterId="@_configModel.EnvironmentClusterId"
-        @ref="_config">
+        Style="height: calc(100vh - 108px);"
+        ConfigPanelStyle="height: calc(100vh - 220px);">
 </Config>
