--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -345,10 +345,9 @@
                             </MChipGroup>
                         </MRow>
                     </div>
-                    <MSpacer></MSpacer>
-                    <div style="width:100%; color:#323D6F; font-size:14px;" class="d-flex justify-end align-center">
-                        <MIcon Size="16" Class="mr-1">mdi-link-variant</MIcon>关联公共配置
-                    </div>
+                </div>
+                <div style="width:100%; color:#323D6F; font-size:14px; position: fixed; right:24px; bottom: 24px;" class="d-flex justify-end">
+                    <MIcon Size="16" Class="mr-1">mdi-link-variant</MIcon>关联公共配置
                 </div>
             </MNavigationDrawer>
 
