--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -119,7 +119,7 @@
                                                             <MListItemTitle>发布历史</MListItemTitle>
                                                         </MListItemContent>
                                                     </MListItem>
-                                                    <MListItem>
+                                                    <MListItem OnClick="()=>ShowRollbackModalAsync(configObject)">
                                                         <MIcon Class="mr-4">mdi-repeat</MIcon>
                                                         <MListItemContent>
                                                             <MListItemTitle>
@@ -127,7 +127,7 @@
                                                             </MListItemTitle>
                                                         </MListItemContent>
                                                     </MListItem>
-                                                    <MListItem>
+                                                    <MListItem OnClick="()=>RevokeAsync(configObject)">
                                                         <MIcon Class="mr-4">mdi-subdirectory-arrow-left</MIcon>
                                                         <MListItemContent>
                                                             <MListItemTitle>
@@ -167,7 +167,48 @@
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowPropertyModal(configObject.Id,configObject.ConfigObjectPropertyContents)"><MIcon Color="#323D6F">mdi-plus-circle</MIcon></MButton>
                                         <MButton StopPropagation Icon Class="mr-4"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
-                                        <MButton StopPropagation Icon Class="mr-4"><MIcon Color="#323D6F">mdi-dots-vertical</MIcon></MButton>
+                                        <MMenu OffsetY>
+                                            <ActivatorContent>
+                                                <MButton @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
+                                                    <MIcon Color="#323D6F">mdi-dots-vertical</MIcon>
+                                                </MButton>
+                                            </ActivatorContent>
+                                            <ChildContent>
+                                                <MList>
+                                                    <MListItem>
+                                                        <MIcon Class="mr-4">mdi-history</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>发布历史</MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MListItem OnClick="()=>ShowRollbackModalAsync(configObject)">
+                                                        <MIcon Class="mr-4">mdi-repeat</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>
+                                                                回滚
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MListItem OnClick="()=>RevokeAsync(configObject)">
+                                                        <MIcon Class="mr-4">mdi-subdirectory-arrow-left</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>
+                                                                撤销
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MDivider></MDivider>
+                                                    <MListItem OnClick="()=>RemoveAsync(configObject)">
+                                                        <MIcon Class="mr-4" Color="error">mdi-delete</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle Class="error--text">
+                                                                删除
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                </MList>
+                                            </ChildContent>
+                                        </MMenu>
                                         <span class="mr-6 text-caption">|</span>
                                     </div>
                                 </MExpansionPanelHeader>
@@ -177,6 +218,7 @@
                                         <ElevationTabItem>
                                             <MCard Style="border:1px solid #E2E7F4;" Class="py-3 mt-4">
                                                 <MDataTable Headers="_headers"
+                                                    SortDesc="true"
                                                     SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
                                                     TItem="ConfigObjectPropertyModel"
                                                     Items="@configObject.ConfigObjectPropertyContents"
@@ -198,21 +240,21 @@
                                                                 {
                                                                     if (context.Item.IsAdded)
                                                                     {
-                                                                        <MIcon Color="#323D6F" Style="margin-bottom:2px;" Size="20">mdi-plus</MIcon>
+                                                                        <MIcon Class="mr-1" Color="#7681AB" Style="margin-bottom:2px;" Size="16">mdi-plus</MIcon>
                                                                     }
                                                                     else if (context.Item.IsEdited)
                                                                     {
-                                                                        <MIcon Color="#323D6F" Style="margin-bottom:2px;" Size="20">mdi-pencil</MIcon>
+                                                                        <MIcon Class="mr-1" Color="#7681AB" Style="margin-bottom:2px;" Size="16">mdi-pencil</MIcon>
                                                                     }
                                                                     else if (context.Item.IsDeleted)
                                                                     {
-                                                                        <MIcon Color="#323D6F" Style="margin-bottom:2px;" Size="20">mdi-delete</MIcon>
+                                                                        <MIcon Class="mr-1" Color="#7681AB" Style="margin-bottom:2px;" Size="16">mdi-delete</MIcon>
                                                                     }
                                                                     <span>未发布</span>
                                                                 }
                                                                 break;
                                                             case "操作":
-                                                                <MIcon Class="mr-3 hover-pointer" Size="20" OnClick="()=>ShowPropertyModal(configObject.Id, null, context.Item)">mdi-pencil</MIcon>
+                                                                <MIcon Class="mr-3 hover-pointer" Color="#485585" Size="20" OnClick="()=>ShowPropertyModal(configObject.Id, null, context.Item)">mdi-pencil</MIcon>
                                                                 <MIcon Class="hover-pointer" Size="20" Color="error" OnClick="()=>DeleteConfigObjectPropertyContentAsync(context.Item, configObject.Id)">mdi-delete</MIcon>
                                                                 break;
                                                             case "修改时间":
@@ -277,7 +319,48 @@
                                         </MButton>
                                         <MButton StopPropagation Icon Class="mr-4"><MIcon Size="18" Color="#323D6F">fas fa-clone</MIcon></MButton>
                                         <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
-                                        <MButton StopPropagation Icon Class="mr-4"><MIcon Color="#323D6F">mdi-dots-vertical</MIcon></MButton>
+                                        <MMenu OffsetY>
+                                            <ActivatorContent>
+                                                <MButton @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
+                                                    <MIcon Color="#323D6F">mdi-dots-vertical</MIcon>
+                                                </MButton>
+                                            </ActivatorContent>
+                                            <ChildContent>
+                                                <MList>
+                                                    <MListItem>
+                                                        <MIcon Class="mr-4">mdi-history</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>发布历史</MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MListItem OnClick="()=>ShowRollbackModalAsync(configObject)">
+                                                        <MIcon Class="mr-4">mdi-repeat</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>
+                                                                回滚
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MListItem OnClick="()=>RevokeAsync(configObject)">
+                                                        <MIcon Class="mr-4">mdi-subdirectory-arrow-left</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle>
+                                                                撤销
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                    <MDivider></MDivider>
+                                                    <MListItem OnClick="()=>RemoveAsync(configObject)">
+                                                        <MIcon Class="mr-4" Color="error">mdi-delete</MIcon>
+                                                        <MListItemContent>
+                                                            <MListItemTitle Class="error--text">
+                                                                删除
+                                                            </MListItemTitle>
+                                                        </MListItemContent>
+                                                    </MListItem>
+                                                </MList>
+                                            </ChildContent>
+                                        </MMenu>
                                         <span class="mr-6 text-caption">|</span>
                                     </div>
                                 </MExpansionPanelHeader>
@@ -353,7 +436,8 @@
                 @if (_selectConfigObject.FormatLabelCode.ToLower() == "properties")
                 {
                     <div style="border-radius:8px; border:1px solid #E2E7F4;" class="py-3 mt-4">
-                        <MDataTable Headers="_headers"
+                        <MDataTable Headers="_releaseHeaders"
+                                DisableSort
                                 TItem="ConfigObjectPropertyModel"
                                 Items="@_selectConfigObjectAllProperties"
                                 Class="table-border-none"
@@ -381,10 +465,24 @@
                                             <MIcon Color="#323D6F" Style="margin-bottom:2px;" Size="20">mdi-delete</MIcon>
                                         }
                                         break;
+                                    case "发布的值":
+                                        if (context.Item.IsDeleted)
+                                        {
+                                            <span>@context.Item.Value</span>
+                                        }
+                                        else if (context.Item.IsEdited)
+                                        {
+                                            <span>@context.Item.TempValue</span>
+                                        }
+                                        break;
+                                    case "未发布的值":
+                                        if (!context.Item.IsDeleted)
+                                        {
+                                            <span>@context.Item.Value</span>
+                                        }
+                                        break;
                                     case "修改时间":
                                         <span>@context.Item.ModificationTime.ToString(T("$DateTimeFormat"))</span>
-                                        break;
-                                    case "操作":
                                         break;
                                     default:
                                         @context.Value
@@ -406,3 +504,11 @@
     </MForm>
 </SheetDialog>
 
+@if (_showRollbackModal)
+{
+    <RollbackModal Show="_showRollbackModal" 
+    FormatLabelCode="@_releaseHistory.FormatLabelCode"
+    CurrentConfigObjectRelease="_releaseHistory.ConfigObjectReleases.First()"
+    RollbackConfigObjectRelease="_releaseHistory.ConfigObjectReleases.Last()">
+</RollbackModal>
+}
