fix: fix rollback component

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/RollbackModal.razor
@@ -71,7 +71,7 @@
         else
         {
             <div class="py-3">
-                <MTextarea HideDetails="true" BackgroundColor="#F6F8FD" Outlined Readonly Value="@RollbackConfigObjectRelease.Content"></MTextarea>
+                <MTextarea HideDetails="true" BackgroundColor="#F6F8FD" Outlined Readonly Value="@RollbackConfigObjectRelease?.Content"></MTextarea>
             </div>
         }
     </ChildContent>
