feat: add release history page

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/RollbackModal.razor
@@ -1,4 +1,4 @@
-﻿<DefaultModal Width="684" Title="回滚" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="OnClick">
+﻿<DefaultModal Width="684" Title="回滚" Value="Value" ValueChanged="ValueChanged" HideCancelAction OnSave="HandOnClickAsync">
     <ChildContent>
         <MAlert Dense
                 Type="AlertTypes.Warning">
